Complete private GitHub build context support
